change font img

--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  background-image: url("/img/test-img.jpg");
+  background-image: url(../../img/font-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   // &__text {
